# NetRAX

./: .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  Doxyfile  README.md  build_start_trees.py  netrax.py  netrax_multi.py  netrax_output_to_dendroscope.py
.theia/: settings.json
examples/sample_networks/: clv_averaging.nw  interleaved_reticulations.nw  small_fake_alignment.nw
experiments/: dendroscope_wrapper.py  netrax_wrapper.py  run_experiments.py  submit_anecdotal_experiments_for_paper_haswell.sh  submit_brlen_linkage_experiments_for_paper.sh  submit_experiments_haswell.sh  submit_experiments_phd_laptop.sh  submit_more_experiments_for_paper.sh  submit_mpi_runtime_experiment_2_haswell.sh  submit_mpi_runtime_experiment_haswell.sh  submit_mpi_runtime_experiment_haswell_manually.sh  submit_multirun_experiment_for_paper.sh  submit_netrax_big_empirical.sh  submit_netrax_big_empirical_extreme_greedy.sh  submit_netrax_big_empirical_species.sh  submit_netrax_big_empirical_species2.sh  submit_partition_size_experiment_for_paper.sh  submit_partition_size_experiment_for_paper_phd_laptop.sh  submit_proper_experiment_c_again_for_paper_haswell.sh  submit_proper_experiments_for_paper_haswell.sh  submit_proper_experiments_for_paper_haswell_missing_iteration.sh  submit_proper_experiments_for_paper_phd_laptop.sh  submit_raxml_big_empirical.sh  submit_raxml_big_empirical_species.sh  submit_score_fixes_haswell.sh  submit_scramble_partitions_experiment_haswell.sh  submit_small_experiments_for_paper.sh
experiments/assemble_empirical_data/: merge_gene_alignments.py
experiments/assemble_snakes/: assemble_snakes.raxml.bestModel  assemble_snakes.raxml.bestTree  data_source.txt  (+10 more)
libs/: CMakeLists.txt
libs/dendroscope/: Dendroscope  Dendroscope.desktop  Dendroscope.vmoptions  uninstall
libs/dendroscope/.install4j/: automaticUpdater  i4jparams.conf  inst_jre.cfg  install.prop  install4j_1jf9y2i-Dendroscope.desktop  pref_jre.cfg  response.varfile  stats.properties
libs/dendroscope/jre/: release
libs/dendroscope/jre/lib/: classlist  javafx.properties
libs/dendroscope/openjfx/unix/lib/: javafx.properties
old_scripts/random_msa/: CMakeLists.txt
scripts/: brlen_histograms.py  build_histograms.sh  generate_random_msa.cpp  merge_gene_alignments.py  split_brlen_output.py
simulator/: README.txt  RandomNetworkandTrees.py  generate_trees_and_seqs_noILS.sh  requirements.txt
src/: Api.cpp  Api.hpp  CMakeLists.txt  DebugPrintFunctions.cpp  DebugPrintFunctions.hpp  Fake.cpp  Fake.hpp  LikelihoodVariant.hpp  NetraxOptions.hpp  Network.hpp  NetworkDistances.cpp  NetworkDistances.hpp  NetworkInfo.cpp  NetworkInfo.hpp  NetworkWrapper.hpp  Options.hpp  PartitionInfo.hpp  RaxmlWrapper.cpp  RaxmlWrapper.hpp  colormod.h  main.cpp  utils.cpp  utils.hpp
src/graph/: AnnotatedNetwork.cpp  AnnotatedNetwork.hpp  AnnotatedNetworkBuffer.cpp  AnnotatedNetworkBuffer.hpp  BiconnectedComponents.cpp  BiconnectedComponents.hpp  Common.hpp  Direction.hpp  DisplayedTreeData.cpp  DisplayedTreeData.hpp  Edge.hpp  Link.hpp  Moves.cpp  Moves.hpp  Network.cpp  Network.hpp  NetworkFunctions.cpp  NetworkFunctions.hpp  NetworkState.hpp  NetworkTopology.cpp  NetworkTopology.hpp  Node.hpp  NodeDisplayedTreeData.cpp  NodeDisplayedTreeData.hpp  NodeType.hpp  RangeInfo.cpp  RangeInfo.hpp  ReticulationConfigSet.cpp  ReticulationConfigSet.hpp  ReticulationData.hpp  TreeLoglData.cpp  TreeLoglData.hpp
src/helper/: ChildrenHelper.cpp  EdgeHelper.cpp  Helper.hpp  InvalidationHelper.cpp  LinkHelper.cpp  NeighborHelper.cpp  NetworkFunctions.cpp  NetworkFunctions.hpp  NetworkTopology.cpp  NetworkTopology.hpp  ParentHelper.cpp  ReticulationConfigHelper.cpp  ReticulationHelper.cpp
src/io/: NetworkIO.cpp  NetworkIO.hpp  RootedNetworkParser.cpp  RootedNetworkParser.hpp  lex_rnetwork.l  lowlevel_parsing.h  lowlevel_parsing.hpp  parse_rnetwork.y  parse_rnetwork_functions.c  parse_rnetwork_functions.cpp  parse_unetwork_functions.c  parse_unetwork_functions.cpp
src/likelihood/: ComplexityScoring.cpp  ComplexityScoring.hpp  DisplayedTreeData.cpp  DisplayedTreeData.hpp  ImprovedLoglikelihood.cpp  ImprovedLoglikelihood.hpp  LikelihoodComputation.cpp  LikelihoodComputation.hpp  LikelihoodDerivatives.cpp  LikelihoodDerivatives.hpp  LikelihoodVariant.hpp  NaiveLoglikelihood.cpp  NaiveLoglikelihood.hpp  Operation.cpp  Operation.hpp  Operations.cpp  Operations.hpp  PseudoLoglikelihood.cpp  PseudoLoglikelihood.hpp  ReticulationConfigSet.cpp  ReticulationConfigSet.hpp  VirtualRerooting.cpp  VirtualRerooting.hpp  mpreal.h
src/moves/: ArcInsertion.cpp  ArcInsertion.hpp  ArcInsertionData.hpp  ArcInsertionMove.cpp  ArcInsertionMove.hpp  ArcRemoval.cpp  ArcRemoval.hpp  ArcRemovalData.hpp  ArcRemovalMove.cpp  ArcRemovalMove.hpp  GeneralMove.cpp  GeneralMove.hpp  GeneralMoveFunctions.cpp  GeneralMoveFunctions.hpp  Move.cpp  Move.hpp  MoveType.hpp  Moves.cpp  Moves.hpp  ParentChange.cpp  ParentChange.hpp  RNNI.cpp  RNNI.hpp  RNNIData.hpp  RNNIMove.cpp  RNNIMove.hpp  RSPR.cpp  RSPR.hpp  RSPRData.hpp  RSPRMove.cpp  RSPRMove.hpp
src/optimization/: BranchLengthOptimization.cpp  BranchLengthOptimization.hpp  ModelOptimization.cpp  ModelOptimization.hpp  MoveType.hpp  Moves.cpp  Moves.hpp  NetworkState.cpp  NetworkState.hpp  Optimization.cpp  Optimization.hpp  ReticulationOptimization.cpp  ReticulationOptimization.hpp  TopologyOptimization.cpp  TopologyOptimization.hpp
src/raxml_wrapping/: NetworkInfo.hpp
src/search/: CandidateSelection.cpp  CandidateSelection.hpp  Filtering.cpp  Filtering.hpp  NetworkSearch.cpp  NetworkSearch.hpp  PromisingState.cpp  PromisingState.hpp  ScoreImprovement.cpp  ScoreImprovement.hpp  Scrambling.cpp  Scrambling.hpp  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  Wavesearch.cpp  Wavesearch.hpp
src/traversal/: Traversal.cpp  Traversal.hpp
test/src/: BrlenOptTest.cpp  CMakeLists.txt  LikelihoodTest.cpp  MovesTest.cpp  NetraxTest.hpp  NetworkIOTest.cpp  SystemTest.cpp  ValgrindTest.cpp  mainTest.cpp
test/src/old_likelihood/: OldLikelihoodComputation.cpp  OldLikelihoodComputation.hpp
(+493 files in other folders)
